<resources>
    <string name="app_name">GetIt!</string>
    <string name="your_groups_title">YOUR GROUPS</string>
    <string name="join_group_title">JOIN GROUP</string>
    <string name="group_name">Group Name</string>
    <string name="group_code">Group Code</string>
    <string name="join_group_btn">JOIN GROUP</string>
    <string name="logout_confirm">Do you want to logout?</string>
    <string name="LatitudeAndLongitude">Latitude: %1$s\nLongitude: %2$s</string>
    <string name="NoLocationAccess">This app does not have location access.\nPlease give location access.</string>


    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered a grocery store zone. Want to buy groceries?</string>
    <string name="geofence_transition_exited">Exited a grocery store zone. Want to buy groceries?</string>
    <string name="geofence_transition_dwell">Dwelling in a grocery store zone. Want to buy groceries?</string>

    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed to enable location based notifications!</string>
    <string name="permission_denied_explanation">Permission was denied. Location based notifications will be disabled :(
        </string>
    <string name="settings">Settings</string>
</resources>